--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ body {
   background-image: url('./assets/cold.jpeg');
   background-size: cover;
   background-position: top;
-  transition: 0.4 ease-out;
+  transition: 0.4s ease-out;
 }
 
 .app.warm {
@@ -36,7 +36,8 @@ main {
 
 .search-box .search-bar {
   display: block;
-  width: 100%;
+  width: 50%;
+  margin: auto;
   padding: 15px;
 
   appearance: none;
@@ -45,8 +46,8 @@ main {
   outline: none;
 
   background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 0px 0px 16px 16px;
-  margin-top: -25px;
+  border-radius: 16px 16px 16px 16px;
+  margin-top: 80px;
 
   box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
 
@@ -71,7 +72,7 @@ main {
 
 
 .location-box .date {
-  color: white;
+  color: lightcoral;
   font-size: 20px;
   font-weight: 300;
   font-style: italic;
@@ -102,7 +103,7 @@ main {
 
 
 .weather-box .weather {
-  color: white;
+  color: lightcoral;
   font-size: 48px;
   text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
 }
